<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        style="@style/Widget.Material3.BottomNavigationView"
        app:itemIconSize="25dp"
        app:itemPaddingTop="5dp"
        app:itemPaddingBottom="5dp"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_navigation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/settingsAnimation"
        android:layout_width="350dp"
        android:layout_height="371dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:layout_marginBottom="25dp"
        android:text="@string/sign_out_button_text"
        android:textAllCaps="false"
        app:icon="@drawable/common_full_open_on_phone"
        app:iconGravity="start"
        app:iconSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_profile_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_above="@+id/sign_out_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="25dp"
        android:text="@string/view_profile_button_text"
        android:textAllCaps="false"
        app:icon="@drawable/ic_baseline_person_24"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dark_mode_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_above="@+id/view_profile_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="25dp"
        android:text="@string/change_theme"
        android:textAllCaps="false"
        app:icon="@drawable/ic_baseline_wb_sunny_24"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp" />

</RelativeLayout>




