...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_mentor_profile_activity"
    tools:context=".ui.stats.ViewMentorProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/requestMeetingButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="262dp"
                android:layout_height="58dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/request_meeting_button_text"
...
